@@ -1,3 +1,7 @@
+2002-03-16  wakaba <w@suika.fam.cx>
+
+	* Header.pm: Use Message::Field::Date.
+
 2002-03-13  wakaba <w@suika.fam.cx>
 
 	* Header.pm: New module.
